# HyperGas

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  README.rst  environment.yml  pyproject.toml  rtd_environment.yml  setup.cfg  setup.py
.github/workflows/: pypi-release.yaml
app/: utils.py  👋About.py
app/pages/: 1_📍_PlumeMarker.py  1_🛰_Quickview.py  2_📈_Emission.py  2_🪄_PlumeMask.py  3_📈_Emission.py
doc/: rtd_environment.yml
doc/source/: batch_processing.rst  conf.py  config.rst  data_download.rst  denoising.rst  dev_guide.rst  emission.rst  index.rst  install.rst  orthorectification.rst  overview.rst  plume_app.rst  plume_mask.rst  reading.rst  retrieval.rst
doc/source/api/: hypergas.a_priori_mask.rst  hypergas.cluster.rst  hypergas.ddeq_plumeline.rst  hypergas.denoise.rst  hypergas.emiss.rst  hypergas.folium_map.rst  hypergas.hsi2rgb.rst  hypergas.hyper.rst  (+11 more)
hyperch4/: __init__.py  config.yaml  denoise.py  folium_map.py  hsi2rgb.py  hyper.py  orthorectification.py  retrieve.py  tle.py  unit_spectrum.py  wind.py
hypergas/: __init__.py  a_priori_mask.py  cluster.py  config.yaml  ddeq_plumeline.py  dem.py  denoise.py  emiss.py  folium_map.py  hsi2rgb.py  hyper.py  ime_csf.py  landmask.py  lut_interp.py  orthorectification.py  plume_utils.py  plumeline.py  quality_mask.py  retrieve.py  tle.py  unit_spectrum.py  wind.py
notebooks/: hyperch4_tutorial.ipynb  hypergas_tutorial.ipynb  land_mask.ipynb  plumemask.ipynb  tv_filter.ipynb
scripts/: convert_l2_tiff.py  l2b_plot.py  l2b_process.py  l2b_reprocess.py  l3b_plot.py  l3b_process.py  l3b_reprocess.py  pseudo_obs.py  utils.py  wind_calibration.py
(+2 files in other folders)
